# components

./: ARCHITECTURE.md  BUFFERPOOL_OWNERSHIP_ANALYSIS.md  Config.in  DECODER_CONFIG_USAGE.md  Makefile.am  components.mk  configure.ac  cpp_compile_error.md  log4cplus.properties  tags  test  test.cpp
include/: BufferManager.hpp  IDisplayDevice.hpp  LinuxFramebufferDevice.hpp  PerformanceMonitor.hpp  Timer.hpp  VideoFile.hpp
include/buffer/: AVFrameAllocator.hpp  Buffer-subsystem-architecture.md  Buffer.hpp  BufferAllocator.hpp  BufferAllocatorBase.hpp  BufferAllocatorFacade.hpp  BufferAllocatorFactory.hpp  BufferHandle.hpp  BufferManager.hpp  BufferPool.hpp  BufferPoolRegistry.hpp  BufferPool_Documentation.md  DMAHeapAllocator.hpp  FramebufferAllocator.hpp  NormalAllocator.hpp  TacoSysAllocator.hpp
include/buffer/allocator/: AVFrameAllocator.hpp  Allocator-subsystem-architecture.md  BufferAllocatorBase.hpp  FramebufferAllocator.hpp  NormalAllocator.hpp
include/buffer/allocator/base/: BufferAllocatorBase.hpp
include/buffer/allocator/facade/: BufferAllocatorFacade.hpp
include/buffer/allocator/factory/: BufferAllocatorFactory.hpp
include/buffer/allocator/implementation/: AVFrameAllocator.hpp  FramebufferAllocator.hpp  NormalAllocator.hpp
include/buffer/bufferpool/: Buffer.hpp  BufferPool.hpp  BufferPoolRegistry.hpp
include/common/: Logger.hpp  Timer.hpp  log4cplus.properties
include/decoder/: Decoder.hpp  DecoderFactory.hpp  FFmpegDecoder.hpp  IDecoder.hpp  README.md  TacoHardwareDecoder.hpp
include/display/: IDisplayDevice.hpp  LinuxFramebufferDevice.hpp  display_buffer_usage_guide.md
include/monitor/: PerformanceMonitor.hpp  Timer.hpp
include/producer/: VideoProducer.hpp
include/productionline/: VideoProductionLine.hpp
include/productionline/io/: BufferWriter.hpp
include/productionline/worker/: BufferFillingWorker.hpp  BufferFillingWorkerFacade.hpp  BufferFillingWorkerFactory.hpp  DECODER_CONFIG_USAGE.md  FfmpegDecodeRtspWorker.hpp  FfmpegDecodeVideoFileWorker.hpp  IBufferFillingWorker.hpp  IVideoFileNavigator.hpp  IoUringRawVideoFileWorker.hpp  MmapRawVideoFileWorker.hpp  Worker-subsystem-architecture.md  WorkerBase.hpp  WorkerConfig.hpp
include/productionline/worker/base/: WorkerBase.hpp
include/productionline/worker/config/: DECODER_CONFIG_USAGE.md
include/productionline/worker/facade/: BufferFillingWorkerFacade.hpp
include/productionline/worker/factory/: BufferFillingWorkerFactory.hpp
include/productionline/worker/implementation/: FfmpegDecodeRtspWorker.hpp  FfmpegDecodeVideoFileWorker.hpp  IoUringRawVideoFileWorker.hpp  MmapRawVideoFileWorker.hpp
include/productionline/worker/interface/: IBufferFillingWorker.hpp  IVideoFileNavigator.hpp
include/videoFile/: FfmpegVideoReader.hpp  IVideoReader.hpp  IoUringVideoReader.hpp  MmapVideoReader.hpp  RtspVideoReader.hpp  TacoH264DecoderReader.hpp  VideoFile.hpp  VideoReaderFactory.hpp
source/: BufferManager.cpp  LinuxFramebufferDevice.cpp  PerformanceMonitor.cpp  Timer.cpp  VideoFile.cpp
source/buffer/: AVFrameAllocator.cpp  Buffer.cpp  BufferAllocator.cpp  BufferAllocatorBase.cpp  BufferAllocatorFacade.cpp  BufferAllocatorFactory.cpp  BufferHandle.cpp  BufferManager.cpp  BufferPool.cpp  BufferPoolRegistry.cpp  DMAHeapAllocator.cpp  FramebufferAllocator.cpp  NormalAllocator.cpp  TacoSysAllocator.cpp  buffer_design.md
source/buffer/allocator/: AVFrameAllocator.cpp  BufferAllocatorBase.cpp  FramebufferAllocator.cpp  NormalAllocator.cpp
source/buffer/allocator/base/: BufferAllocatorBase.cpp
source/buffer/allocator/facade/: BufferAllocatorFacade.cpp
source/buffer/allocator/factory/: BufferAllocatorFactory.cpp
source/buffer/allocator/implementation/: AVFrameAllocator.cpp  FramebufferAllocator.cpp  NormalAllocator.cpp
source/buffer/bufferpool/: Buffer.cpp  BufferPool.cpp  BufferPoolRegistry.cpp
source/common/: Timer.cpp
source/decoder/: Decoder.cpp  DecoderFactory.cpp  FFmpegDecoder.cpp  TacoHardwareDecoder.cpp
source/display/: LinuxFramebufferDevice.cpp
source/monitor/: PerformanceMonitor.cpp  Timer.cpp
source/producer/: VideoProducer.cpp
source/productionline/: VideoProductionLine.cpp
source/productionline/io/: BufferWriter.cpp
source/productionline/worker/: BufferFillingWorker.cpp  BufferFillingWorkerFacade.cpp  BufferFillingWorkerFactory.cpp  FfmpegDecodeRtspWorker.cpp  FfmpegDecodeVideoFileWorker.cpp  IoUringRawVideoFileWorker.cpp  MmapRawVideoFileWorker.cpp
source/productionline/worker/facade/: BufferFillingWorkerFacade.cpp
source/productionline/worker/factory/: BufferFillingWorkerFactory.cpp
source/productionline/worker/implementation/: FfmpegDecodeRtspWorker.cpp  FfmpegDecodeVideoFileWorker.cpp  IoUringRawVideoFileWorker.cpp  MmapRawVideoFileWorker.cpp
source/videoFile/: FfmpegVideoReader.cpp  MmapVideoReader.cpp  RtspVideoReader.cpp  TacoH264DecoderReader.cpp  VideoFile.cpp  VideoReaderFactory.cpp
test_cases/dec/: test.cpp  test01.cpp
test_cases/framework/: TestCase.hpp  TestMacros.hpp  TestRegistry.hpp
